# optitrack_ros2

./: README.md  package.xml  setup.py
NatNetSDKPython/: pyproject.toml
NatNetSDKPython/NatNetSDKPython/: Get_state.py  NatNetClient.py  PythonSample.py
optitrack_ros2/: optitrack_node.py
