[build-system]
requires = ["setuptools>=40"]
build-backend = "setuptools.build_meta"

[project]
name = "NatNetSDKPython"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A package to control cable driven soft arms"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[tool.setuptools]
license-files = ["LICENSE*"]